[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.116.1"}
psycopg = {extras = ["binary"], version = "^3.2.9"}
sqlalchemy = "^2.0.43"
alembic = "^1.16.4"
python-multipart = "^0.0.20"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.1.1"
pillow = "^11.3.0"
pydicom = "^3.0.1"
numpy = ">=1.21,<2.0"
scikit-image = "^0.25.2"
opencv-python = ">=4.5.0,<5.0.0"
pydantic-settings = "^2.10.1"
monai = "^1.5.0"
torchxrayvision = "^1.3.5"
transformers = "^4.55.4"
accelerate = "^1.10.0"
pynetdicom = "^3.0.4"
pyotp = "^2.9.0"
qrcode = {extras = ["pil"], version = "^8.2"}
prometheus-client = "^0.22.1"
psycopg2-binary = "^2.9.10"
redis = "^6.4.0"
celery = "^5.5.3"
reportlab = "^4.4.3"
websockets = "^15.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
